# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by setuptools_scm
name = "orger"
dependencies = [
    "platformdirs", # to keep state files
    "atomicwrites", # to safely append data to a file
]
requires-python = ">= 3.9"

## these need to be set if you're planning to upload to pypi
description = "Converts data into org-mode"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]


[project.urls]
Homepage = "https://github.com/karlicoss/orger"
##

[project.optional-dependencies]
optional = [
    "colorlog",
]

[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
