# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "orger"
dependencies = [
    "platformdirs", # to keep state files
    "atomicwrites", # to safely append data to a file
]
requires-python = ">=3.9"

## these need to be set if you're planning to upload to pypi
description = "Converts data into org-mode"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]


[project.urls]
Homepage = "https://github.com/karlicoss/orger"
##

[project.optional-dependencies]
optional = [
    "colorlog",
]

[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]



# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/orger"]

[tool.hatch.version]
source = "vcs"
