# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "orger"
dependencies = [
    "platformdirs", # to keep state files
    "atomicwrites", # to safely append data to a file
]
requires-python = ">=3.10"

## these need to be set if you're planning to upload to pypi
description = "Converts data into org-mode"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]


[project.urls]
Homepage = "https://github.com/karlicoss/orger"
##

[project.optional-dependencies]
optional = [
    "colorlog",
]

[dependency-groups]
testing = [
    "pytest",
    "ruff",
]
typecheck = [
    { include-group = "testing" },
    "mypy",
    "lxml",  # for mypy coverage
    "ty>=0.0.1a20",

    "orger[optional]",
]
typecheck-all = [
    { include-group = "typecheck" },
    "HPI",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/orger"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
